--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
         </form>
     </header>
     <p></p>
-    <button id="btn1" onclick="red()" style="margin: 2px;">Красный</button>
+    <button id="btn1" onclick="red()" style="margin: 2px; margin-top: 10px;">Красный</button>
     <button id="btn2" onclick="green()" style="margin: 2px;">Зелёный</button>
     <button id="btn3" onclick="yellow()" style="margin: 2px;">Жёлтый</button>
     <button id="btn4" onclick="grey()" style="margin: 2px;">Серый</button>
